Fix the width of the container
instead of max width, I fixed it so it doesn't get distorted on mobile devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ div.card.weather {
   padding: 0;
   background-color: #effffb;
   border: 2px solid #15164d;
-  max-width: 585px;
+  width: 585px;
 }
 
 div.row.one {
